--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
 
+    <!--HomepageEls will serve as a temporary replacement for the Journal and Intructions Sheet
+    During development. Meant to simulate (roughly) the space they will take up-->
     <div class="homepageEls">
-        <div style="background-color: aqua; width: 250px; height: 250px;">
+        <div style="background-color: aqua; width: 220px; height: 295px;">
             e
         </div>
 
-        <div style="background-color: rgb(255, 0, 149); width: 250px; height: 250px;">
+        <div style="background-color: rgb(255, 0, 149); width: 250px; height: 325px;">
             e
         </div>
     </div>
