--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         </div>
 
         <div style="background-color: rgb(255, 0, 149); width: 250px; height: 325px;">
-            e
+            <a href="./subtabs/ch1start.html">
+                <h3>Journal</h3>
+            </a>
         </div>
     </div>
     
