--- a/subtabs/ch1start.html
+++ b/subtabs/ch1start.html
@@ -6,6 +6,8 @@
     <title>Chapter 1 Initial Page</title>
 </head>
 <body>
-    
+    <a href="./chaptersel.html">
+        <h1>chapter 1 initial page</h1>
+    </a>
 </body>
 </html>
