Full instructions, edited spacing

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
         <div class="instructionSheet" style="position: relative;">
             <img src="./styles/images/notebookpaper.jpg" style="width: 250px;">
             <p> 
-                <br>
                 Things to keep in mind: <br>
                 1) click the bottom corners
                 of pages to turn left or right. <br>
                 2) press and hold certain stickers to 
                 see more content <br>
-                3) click the journal to start
+                3) to make a decision, click the option you
+                prefer when prompted to choose <br>
+                4) click the journal to start
                 
             </p>
         </div>
