initial styling of chapter page: "responsive?" to basic screen changes in inspect

--- a/subtabs/ch1start.html
+++ b/subtabs/ch1start.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/chapters.css">
+    <link rel="stylesheet" href="../styles/chapters.css">
     <link rel="stylesheet" href="https://use.typekit.net/yrt0kfu.css">
     <title>Chapter 1 Initial Page</title>
 </head>
 <body>
     <a href="./chaptersel.html">
-        <h1>chapter 1 initial page</h1>
+        <h1 class="chapTitle">10/17/2024</h1>
     </a>
 </body>
 </html>
