stress tracker displays in ch selection, added comments/image

--- a/subtabs/ch1start.html
+++ b/subtabs/ch1start.html
@@ -18,5 +18,9 @@
         <img src="../styles/images/pageturn.png" class="pageTurnRight">
     </a>
 
+    <div class="choice">
+        <img src="../styles/images/decisionpencil.png" style="width: 200px; align-self: left;">
+    </div>
+
 </body>
 </html>
