implementation of decision maker (needs further styling)

--- a/subtabs/ch1start.html
+++ b/subtabs/ch1start.html
@@ -18,8 +18,17 @@
         <img src="../styles/images/pageturn.png" class="pageTurnRight">
     </a>
 
-    <div class="choice">
-        <img src="../styles/images/decisionpencil.png" style="width: 200px; align-self: left;">
+    <!--pencil doodle indicated decision to be made.
+    Use buttons for decisions to allow recording of decisions
+    and changing of future content based on JS var/stress level-->
+    <div class="choiceContainer">
+        <img src="../styles/images/decisionpencil.png">
+
+        <div class="choiceContent">
+            <button>Doomscroll for 10 hours</button>
+            <button>Go to sleep bro</button>
+
+        </div>
     </div>
 
 </body>
